# intelliscan

./: .gitignore  README.md  _version.py  conv_nii_jpg.py  demo.py  detection.py  eval_accuracy.py  files.txt  generate_bb3d_2.py  generate_report.py  gltf_utils.py  infer_batch_new.py  inference.py  inference.toml  main.py  merge.py  metrology.py  mmt.py  mmt_util.py  profile_segmentation.py  pyproject.toml  pyproject.toml.example  report.py  segmentation.py  utils.py  version.py
metrology/: __init__.py  config.py  post_process.py
networks/: __init__.py  vnet.py  vnet_pyramid.py
